--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "project_name"
+name = "simulate randomness in fonts"
 version = "0.0.1"
 authors = [
   { name="OpenPecha", email="dev@openpecha.org" },
 ]
-description = "A small example package"
+description = "This is an experiment to simulate randomness in fonts using pillow"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [
@@ -19,9 +19,10 @@ classifiers = [
 
 [project.optional-dependencies]
 dev = [
-    "pytest",
-    "pytest-cov",
-    "pre-commit",
+  "pytest",
+  "pytest-cov",
+  "pre-commit",
+  "pillow",
 ]
 
 
