--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "simulate randomness in fonts"
+name = "simulate_font_randomness"
 version = "0.0.1"
 authors = [
   { name="OpenPecha", email="dev@openpecha.org" },
